# StanCache

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmarks/: benchmark_gp.cpp
examples/: example_cpp_only.cpp
include/stancache/: benchmark.hpp  gaussian_process.hpp  interpolator.hpp  kd_adaptor.hpp  kernel.hpp
src/: gaussian_process.cpp  interpolator.cpp  kernel.cpp
tests/: test_gp.cpp  test_interpolator.cpp
